# lania-cli-v2

./: .editorconfig  .gitignore  .npmrc  .prettierignore  README.md  README.zh-CN.md  commitlint.config.cjs  dangerfile.mjs  deny.toml  eslint.config.js  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  renovate.json
rust/: Cargo.toml
rust/crates/lania-cli/: Cargo.toml
rust/crates/lania-cli/src/: main.rs  profile.rs
rust/crates/lania-cli/src/output/: json.rs  mod.rs
rust/crates/lania-cli/src/output/human/: common.rs  mod.rs  product.rs  system.rs  template.rs  tools.rs
rust/crates/lania-cli/tests/: phase3_benchmark.rs  phase3_e2e.rs
rust/crates/lania-cli/tests/phase3_e2e/: build_and_lint.rs  common.rs  create_and_add.rs  distribution_and_dynamic.rs  generate_workflows.rs  help_and_config.rs  sync_and_release.rs  template_commands.rs
rust/crates/lania-command/: Cargo.toml
rust/crates/lania-command/src/: context.rs  lib.rs  localization.rs  parser.rs  spec.rs  tests.rs
rust/crates/lania-command/src/parser/: tests.rs
rust/crates/lania-config/: Cargo.toml
rust/crates/lania-config/src/: discovery.rs  lib.rs  models.rs  normalize.rs  parse_plugins.rs  parse_release.rs  parse_snapshots.rs  parse_utils.rs  service.rs  tests.rs  validate.rs  validate_lan.rs  validate_release.rs  validate_sections.rs  validate_utils.rs  version.rs
rust/crates/lania-exec/: Cargo.toml
rust/crates/lania-exec/src/: lib.rs  tests.rs
rust/crates/lania-format/: Cargo.toml
rust/crates/lania-format/src/: lib.rs
rust/crates/lania-fs/: Cargo.toml
rust/crates/lania-fs/src/: lib.rs  tests.rs
rust/crates/lania-git/: Cargo.toml
rust/crates/lania-git/src/: lib.rs  models.rs  tests.rs  utils.rs
rust/crates/lania-git/src/service/: branch.rs  exec.rs  history.rs  mod.rs  planning.rs  remote.rs  workspace.rs
rust/crates/lania-hooks/: Cargo.toml
rust/crates/lania-hooks/src/: lib.rs
rust/crates/lania-host/: Cargo.toml
rust/crates/lania-host/src/: capability.rs  execution.rs  lib.rs  plugin.rs  registry.rs  runtime.rs  tests.rs
rust/crates/lania-host/src/execution/: bridge_api.rs  bridge_helpers.rs  context.rs  tests.rs  types.rs  utils.rs
rust/crates/lania-host/src/execution/bridge_helpers/: events.rs  long_running.rs  requests.rs  state.rs
rust/crates/lania-host/src/runtime/: catalog.rs  config.rs  core.rs  dynamic.rs  execute.rs  host_rpc.rs  lifecycle.rs  tests.rs
rust/crates/lania-host/src/runtime/config/: loading.rs  project_extensions.rs  project_extensions_dynamic_commands.rs  project_extensions_hook_bindings.rs  summary.rs
rust/crates/lania-host/src/runtime/dynamic/: command.rs  hook_invokers.rs  hook_registration.rs  hooks.rs  prompt.rs  types.rs
rust/crates/lania-logger/: Cargo.toml
rust/crates/lania-logger/src/: lib.rs  tests.rs
rust/crates/lania-node-bridge/: Cargo.toml
rust/crates/lania-node-bridge/src/: client.rs  lib.rs  protocol.rs
rust/crates/lania-node-bridge/src/client/: capabilities.rs  process.rs  tests.rs  transport.rs
rust/crates/lania-plugins-command-add/: Cargo.toml
rust/crates/lania-plugins-command-add/src/: lib.rs
rust/crates/lania-plugins-command-build/: Cargo.toml
rust/crates/lania-plugins-command-build/src/: handlers.rs  lib.rs  registry.rs  request.rs  spec.rs
rust/crates/lania-plugins-command-create/: Cargo.toml
rust/crates/lania-plugins-command-create/src/: lib.rs
rust/crates/lania-plugins-command-dev/: Cargo.toml
rust/crates/lania-plugins-command-dev/src/: handlers.rs  lib.rs  registry.rs  request.rs  spec.rs  watch.rs
rust/crates/lania-plugins-command-generate/: Cargo.toml
rust/crates/lania-plugins-command-generate/src/: lib.rs  specs.rs  tests.rs
rust/crates/lania-plugins-command-lint/: Cargo.toml
rust/crates/lania-plugins-command-lint/src/: lib.rs
rust/crates/lania-plugins-command-locale/: Cargo.toml
rust/crates/lania-plugins-command-locale/src/: lib.rs
rust/crates/lania-plugins-command-release/: Cargo.toml
rust/crates/lania-plugins-command-release/src/: lib.rs  tests.rs
rust/crates/lania-plugins-command-sync/: Cargo.toml
rust/crates/lania-plugins-command-sync/src/: lib.rs
rust/crates/lania-plugins-command-template/: Cargo.toml
rust/crates/lania-plugins-command-template/src/: lib.rs
rust/crates/lania-plugins-command-tools/: Cargo.toml
rust/crates/lania-plugins-command-tools/src/: lib.rs  list.rs  run.rs  shared.rs  view.rs
rust/crates/lania-plugins-command-tools/src/run/: compile.rs  detect.rs  planner.rs  resolve.rs  shebang.rs  tests.rs
rust/crates/lania-plugins-command-tools/src/view/: directory.rs  file_kind.rs  matcher.rs  open.rs  render.rs  tests.rs
rust/crates/lania-pm/: Cargo.toml
rust/crates/lania-pm/src/: lib.rs  tests.rs
rust/crates/lania-preferences/: Cargo.toml
rust/crates/lania-preferences/src/: lib.rs
rust/crates/lania-presentation/: Cargo.toml
rust/crates/lania-presentation/src/: lib.rs  tests.rs
rust/crates/lania-progress/: Cargo.toml
rust/crates/lania-progress/src/: lib.rs  models.rs  render.rs  service.rs  terminal.rs  tests.rs
rust/crates/lania-prompt/: Cargo.toml
rust/crates/lania-prompt/src/: engine.rs  lib.rs  models.rs  parsing.rs  service.rs  tests.rs  ui_dialoguer.rs  ui_terminal.rs
rust/crates/lania-task/: Cargo.toml
rust/crates/lania-task/src/: executor.rs  helpers.rs  lib.rs  service.rs  tests.rs  types.rs
rust/crates/lania-validate/: Cargo.toml
rust/crates/lania-validate/src/: lib.rs
rust/crates/lania-workflows/: Cargo.toml
rust/crates/lania-workflows/src/: lib.rs  models.rs  workflow_hooks.rs
rust/crates/lania-workflows/src/create/: add_workflow.rs  capability.rs  create_workflow.rs  mod.rs  prompts.rs  templates.rs  tests.rs
rust/crates/lania-workflows/src/generate/: api.rs  api_support.rs  mod.rs  module.rs  module_inject.rs  module_manifest.rs  module_render.rs  schema.rs  schema_utils.rs  types.rs
rust/crates/lania-workflows/src/sync/: mod.rs
rust/crates/lania-workflows/src/tests/: common.rs  create_add.rs  generate_api.rs  generate_module.rs  mod.rs  release.rs  sync.rs
(+104 files in other folders)
