[package]
name = "lania-plugins-command-lint"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
lania-command = { path = "../lania-command" }
lania-host = { path = "../lania-host" }
lania-logger = { path = "../lania-logger" }
lania-node-bridge = { path = "../lania-node-bridge" }
serde_json.workspace = true
