[package]
name = "lania-plugins-command-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
lania-command = { path = "../lania-command" }
lania-exec = { path = "../lania-exec" }
lania-host = { path = "../lania-host" }
lania-node-bridge = { path = "../lania-node-bridge" }
serde_json.workspace = true
shell-words.workspace = true
regex.workspace = true
